--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
 				<p class="text1"><span id="text-75" >I</span> ❤ <span id="text-76" >U</span> </p>
-				<p class="text2">Nhấn phím "↓" <span id="text-78" >từ từ để trải nghiệm</span></p>
+				<p class="text2">Sử dụng laptop,nhấn phím "↓" <span id="text-78" >từ từ để trải nghiệm nhớ tích 2 lần vào phần phát nhạc phía trên trái tim nằm ở bên phải cuối </span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
 				<p class="top-text" id="text-1" >Trước khi có em, trong tim anh trống rỗng.</p>
