--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 				<img src='img/iali2.jpg' />
 			</div>
 			<div id="/section-7/page-2" class="ft-page page-40" data-id="page-2">
-				<h3 id="text-45" >Không  em đằng sau...</h3>
+				<h3 id="text-45" >Không cócó em đằng sau...</h3>
 				<img src='img/iali14.jpg'  />
 			</div>
 			<div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
@@ -220,7 +220,7 @@
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
 				<img src='img/iali42.jpg' />
-				<h3 id="text-49" >Hãy tin anh... vì anh không phải là người giàu tình yêu để đùa giỡn=))</h3>
+				<h3 id="text-49" >Hãy tin anh... vì anh không phải là người giàu tình yêu để đùa giỡn</h3>
 			</div>
 			<div id="/section-7/page-6" class="ft-page page-44 left-img" data-id="page-6">
 				<h3><span id="text-50" >Nằm xuống! Nhắm mắt lại...</span><br /><span id="text-51" >chầm chậm suy nghĩ~</span></h3>
