--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<img src='img/iali59.png' />
 			</div>
 			<div id="/section-4/page-5" class="ft-page page-22 left-img" data-id="page-5">
-				<h3 id="text-24" >Em cùng em đi trên định mệnh</h3>
+				<h3 id="text-24" >Anh cùng em đi trên định mệnh</h3>
 				<img src='img/iali4.jpg' />
 			</div>
 			<div id="/section-4/page-6" class="ft-page page-23 left-img" data-id="page-6">
@@ -206,7 +206,7 @@
 				<img src='img/iali2.jpg' />
 			</div>
 			<div id="/section-7/page-2" class="ft-page page-40" data-id="page-2">
-				<h3 id="text-45" >Không cócó em đằng sau...</h3>
+				<h3 id="text-45" >Không có em đằng sau...</h3>
 				<img src='img/iali14.jpg'  />
 			</div>
 			<div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
